# python-sdk

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  proto-drift.yml  publish.yml
docs/: architecture.md  auth.md  contributing.md  determinism.md  index.md  protocol.md  security.md
docs/api/: index.md
docs/guides/: agent-framework.md  building-orchestrators.md  direct-agent-auth.md  error-handling.md  session-discovery.md  streaming.md
docs/modes/: decision.md  handoff.md  proposal.md  quorum.md  task.md
examples/: agent_policy_aware.py  decision_smoke.py  direct_agent_auth_initiator.py  direct_agent_auth_observer.py  handoff_escalation.py  policy_registration.py  proposal_negotiation.py  quorum_approval.py  task_delegation.py
src/macp/modes/decision/v1/: decision_pb2.py  decision_pb2_grpc.py
src/macp/modes/handoff/v1/: handoff_pb2.py  handoff_pb2_grpc.py
src/macp/modes/proposal/v1/: proposal_pb2.py  proposal_pb2_grpc.py
src/macp/modes/quorum/v1/: quorum_pb2.py  quorum_pb2_grpc.py
src/macp/modes/task/v1/: task_pb2.py  task_pb2_grpc.py
src/macp/v1/: core_pb2.py  core_pb2_grpc.py  envelope_pb2.py  envelope_pb2_grpc.py
src/macp_sdk/: __init__.py  _logging.py  auth.py  base_projection.py  base_session.py  client.py  constants.py  decision.py  envelope.py  errors.py  handoff.py  policy.py  projections.py  proposal.py  proto_registry.py  quorum.py  retry.py  task.py  validation.py  watchers.py
src/macp_sdk/agent/: __init__.py  cancel_callback.py  dispatcher.py  participant.py  runner.py  strategies.py  transports.py  types.py
tests/: conftest.py
tests/conformance/: test_conformance_projections.py
tests/integration/: test_direct_agent_auth.py  test_modes.py  test_session_discovery.py  test_subscribe_replay.py
tests/unit/: test_agent_dispatcher.py  test_agent_participant.py  test_agent_strategies.py  test_agent_transports.py  test_auth.py  test_cancel_callback.py  test_client_helpers.py  test_client_policy.py  test_client_security.py  test_client_sessions.py  test_client_signals.py  test_client_stream.py  test_decision_projection.py  test_envelope.py  test_error_codes.py  test_errors.py  test_handoff_context_after_accept.py  test_handoff_projection.py  test_max_participants.py  test_outcome_positive.py  test_policy.py  test_proposal_projection.py  test_proto_registry.py  test_quorum_projection.py  test_retry.py  test_sender_validation.py  test_serialization_determinism.py  test_session_id_validation.py  test_sessions.py  test_signal_validation.py  test_task_projection.py  test_validation.py  test_vote_validation.py  test_watchers.py
