[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macp-sdk-python"
version = "0.2.1"
description = "Python SDK for the MACP Rust runtime"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "OpenAI", email = "support@openai.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "grpcio>=1.74.0",
  "protobuf>=5.27.0",
  # Tested against 0.1.x; narrow the upper bound so a hypothetical 0.2.0
  # proto release doesn't silently land without the conformance suite
  # being re-run. See docs/contributing.md "Bumping macp-proto".
  "macp-proto>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.74.0",  # only needed for proto-python package publishing
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "grpc-stubs>=1.53",
  "build>=1.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["macp_sdk*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = []

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ARG", "RET", "N", "RUF"]
# N806: allow lowercase-only asserts (pytest idiom); tests fake-proto fixtures
# sometimes bind PascalCase temporaries that mirror proto class names.
# N802: tests use snake_case method names in some mocked proto calls.
extend-ignore = []

[tool.ruff.lint.per-file-ignores]
# Test files get some latitude:
#   ARG001/002/005 — pytest fixtures and mock-lambda signatures intentionally
#                    carry unused parameters to match the production callable.
#   N802/806      — mocked proto classes and fixtures use PascalCase locals.
"tests/**/*.py" = ["ARG001", "ARG002", "ARG005", "N802", "N806"]

[tool.mypy]
packages = ["macp_sdk"]
mypy_path = "src"
exclude = []
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
# Protobuf generated modules lack type stubs — treat all their types as Any
follow_imports = "normal"

[[tool.mypy.overrides]]
module = "macp.*"
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "macp.v1.*"
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "macp.modes.*"
ignore_missing_imports = true
ignore_errors = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: requires running MACP runtime",
  "conformance: replays conformance fixtures against runtime",
]
